tests/should-fail/shadowing/shadowed-type-local.j
type effect extends handle

function test takes nothing returns nothing
    local effect effect
    local effect sfx
endfunction
